--- a/src/app/pages/checkout/views/address-cart/address-cart.component.html
+++ b/src/app/pages/checkout/views/address-cart/address-cart.component.html
@@ -1,6 +1,7 @@
 <div class="col-span-3 lg:col-span-2 rounded-3xl border-2 border-dashed p-2 ">
   <p class="text-gray-700">عنوان الشحن </p>
-  <form [formGroup]="addressForm" (ngSubmit)="onSubmit()" class="grid gap-4 mb-4 sm:grid-cols-2">
+  <form *ngIf="!isAddressFormSubmitted" [formGroup]="addressForm" (ngSubmit)="onSubmit()"
+    class="grid gap-4 mb-4 sm:grid-cols-2">
     <div>
       <label for="city" class="block mb-2 text-sm font-medium text-gray-900 ">
         <span>*</span>
@@ -50,7 +51,55 @@
   </div>
   <!-- Actions  -->
   </form>
+<div *ngIf="isAddressFormSubmitted" class="grid gap-4 mb-4 sm:grid-cols-2">
+  <div>
+    <label for="city" class="block mb-2 text-sm font-medium text-gray-900 ">
+      <span>*</span>
+      <span>مدينة</span>
+    </label>
+    <label formControlName="city" type="text" name="city" id="city"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"></label>
+  </div>
+  <div>
+    <label for="state" class="block mb-2 text-sm font-medium text-gray-900 :text-white">
+      <span>*</span>
+      <span>محافظة</span>
+    </label>
+    <label formControlName="state" type="text" name="state" id="state"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"></label>
+  </div>
 
+  <div>
+    <label for="street" class="block mb-2 text-sm font-medium text-gray-900 ">
+      <span>*</span>
+      <span>شارع</span>
+    </label>
+    <label formControlName="street" type="text" name="street" id="street"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"></label>
+  </div>
+  <div>
+    <label for="neighborhood" class="block mb-2 text-sm font-medium text-gray-900 ">
+      <span>*</span>
+      <span>حي</span>
+    </label>
+    <label formControlName="neighborhood" type="text" name="neighborhood" id="neighborhood"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-600 focus:border-blue-600 block w-full p-2.5 :bg-gray-700 :border-gray-600 :placeholder-gray-400 :text-white :focus:ring-blue-500 :focus:border-blue-500"></label>
+  </div>
+  <!-- Actions  -->
+  <div class="flex items-center gap-x-3">
+    <button type="submit"
+      class="mx-0.5 bg-gradient-to-bl from-blue-400 to-blue-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br disabled:cursor-not-allowed disabled:from-gray-400 disabled:to-gray-400 "
+      [disabled]="true">
+      حفظ البيانات
+    </button>
+    <button
+      class="mx-0.5 bg-gradient-to-bl from-red-400 to-red-700 inline-block px-5 py-2 my-1 text-white font-semibold border-solid border-2 border-gray-200 rounded-3xl shadow-inner hover:bg-gradient-to-br disabled:cursor-not-allowed disabled:from-gray-400 disabled:to-gray-400"
+      [disabled]="true" (click)="resetForm()">
+      افراغ البيانات
+    </button>
+  </div>
+  <!-- Actions  -->
+  </div>
 </div>
 <!-- Toast -->
 <app-toast *ngIf="showErrToast" toastType="error" [toastMessage]="toastErrMessage"
