--- a/src/app/pages/index/views/product-comments/product-comments.component.html
+++ b/src/app/pages/index/views/product-comments/product-comments.component.html
@@ -9,8 +9,9 @@
         </h2>
         <div class="flex items-center">
         <div>
-          <input type="radio" name="rating" value="1" formControlName="rating" class="sr-only">
-          <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+          <input type="radio" name="rating" id="star-one" value="1" formControlName="rating" class="sr-only ">
+          <label for="star-one"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400"
+              [ngClass]="reviewForm.get('rating').value == 1?'text-yellow-400':''" fill="currentColor"
               viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <title>First star</title>
@@ -20,8 +21,8 @@
           </svg></label>
           </div>
           <div>
-            <input type="radio" name="rating" value="2" formControlName="rating" class="sr-only">
-            <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+            <input type="radio" name="rating" id="star-two" value="2" formControlName="rating" class="sr-only">
+            <label for="star-two"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
                 viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <title>First star</title>
                 <path
@@ -30,8 +31,8 @@
               </svg></label>
               </div>
               <div>
-                <input type="radio" name="rating" value="3" formControlName="rating" class="sr-only">
-                <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                <input type="radio" name="rating" id="star-three" value="3" formControlName="rating" class="sr-only">
+                <label for="star-three"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <title>First star</title>
                     <path
@@ -40,8 +41,8 @@
                 </svg></label>
                 </div>
                 <div>
-                  <input type="radio" name="rating" value="4" formControlName="rating" class="sr-only">
-                  <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                  <input type="radio" name="rating" id="star-four" value="4" formControlName="rating" class="sr-only">
+                  <label for="star-four"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
                       viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                       <title>First star</title>
                       <path
@@ -50,8 +51,8 @@
                 </svg></label>
                 </div>
                 <div>
-                  <input type="radio" name="rating" value="5" formControlName="rating" class="sr-only">
-                  <label for="first-star"> <svg aria-hidden="true" class="w-10 h-10 text-yellow-400" fill="currentColor"
+                  <input type="radio" name="rating" id="star-five" value="5" formControlName="rating" class="sr-only">
+                  <label for="star-five"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
                       viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                       <title>First star</title>
                       <path
@@ -66,14 +67,14 @@
                           <label for="review" class="sr-only">Your comment</label>
                           <textarea formControlName="review" id="review" rows="6"
                             class="px-0 text-right w-full text-sm text-gray-900 border-0 focus:ring-0 focus:outline-none "
-                            placeholder="اضف تعليقك.." required></textarea>
+                            placeholder="اضف تعليقك.." ></textarea>
                         </div>
                         <button type="submit"
                           class="inline-block mr-auto py-2.5 px-4  text-xs font-medium text-center  bg-transparent text-black hover:text-white hover:bg-blue-400 border border-blue-400 rounded-3xl focus:ring-4 focus:ring-primary-200 :focus:ring-primary-900 hover:bg-primary-800">
                           اضافة مراجعة
                         </button>
             </div>
-            </form>
+          </form>
       <div class="max-h-96 overflow-y-auto">
         <article class="p-6 mb-6 text-base bg-white rounded-3xl " *ngFor="let review of reviews;let i = index">
           <footer class="flex justify-between items-center mb-2 ">
@@ -96,7 +97,7 @@
                   d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z">
                 </path>
               </svg>
-              <span class="sr-only">Comment settings</span>
+              <span class="">Comment settings</span>
             </button>
             <!-- Dropdown menu -->
             <div id="dropdownComment1" *ngIf="articleIndex == i && showCommentActions"
@@ -191,7 +192,7 @@
                   d="M6 10a2 2 0 11-4 0 2 2 0 014 0zM12 10a2 2 0 11-4 0 2 2 0 014 0zM16 12a2 2 0 100-4 2 2 0 000 4z">
                 </path>
               </svg>
-              <span class="sr-only">Comment settings</span>
+              <span class="">Comment settings</span>
             </button>
             <!-- Dropdown menu -->
             <div id="dropdownComment2"
