--- a/src/app/pages/index/views/product-comments/product-comments.component.html
+++ b/src/app/pages/index/views/product-comments/product-comments.component.html
@@ -11,7 +11,7 @@
         <div>
           <input type="radio" name="rating" id="star-one" value="1" formControlName="rating" class="sr-only ">
           <label for="star-one"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400"
-              [ngClass]="reviewForm.get('rating').value == 1?'text-yellow-400':''" fill="currentColor"
+              [ngClass]="reviewForm.get('rating').value >= 1?'text-yellow-400':''" fill="currentColor"
               viewBox="0 0 20 20"
             xmlns="http://www.w3.org/2000/svg">
             <title>First star</title>
@@ -22,7 +22,8 @@
           </div>
           <div>
             <input type="radio" name="rating" id="star-two" value="2" formControlName="rating" class="sr-only">
-            <label for="star-two"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
+            <label for="star-two"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400"
+                [ngClass]="reviewForm.get('rating').value >= 2?'text-yellow-400':''" fill="currentColor"
                 viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <title>First star</title>
                 <path
@@ -32,7 +33,8 @@
               </div>
               <div>
                 <input type="radio" name="rating" id="star-three" value="3" formControlName="rating" class="sr-only">
-                <label for="star-three"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
+                <label for="star-three"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400"
+                    [ngClass]="reviewForm.get('rating').value >= 3?'text-yellow-400':''" fill="currentColor"
                     viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <title>First star</title>
                     <path
@@ -42,7 +44,8 @@
                 </div>
                 <div>
                   <input type="radio" name="rating" id="star-four" value="4" formControlName="rating" class="sr-only">
-                  <label for="star-four"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
+                  <label for="star-four"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400"
+                      [ngClass]="reviewForm.get('rating').value >= 4?'text-yellow-400':''" fill="currentColor"
                       viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                       <title>First star</title>
                       <path
@@ -52,7 +55,8 @@
                 </div>
                 <div>
                   <input type="radio" name="rating" id="star-five" value="5" formControlName="rating" class="sr-only">
-                  <label for="star-five"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400" fill="currentColor"
+                  <label for="star-five"> <svg aria-hidden="true" class="w-10 h-10 text-gray-400"
+                      [ngClass]="reviewForm.get('rating').value >= 5?'text-yellow-400':''" fill="currentColor"
                       viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                       <title>First star</title>
                       <path
