--- a/src/app/pages/dashboard/components/users/users.component.html
+++ b/src/app/pages/dashboard/components/users/users.component.html
@@ -230,7 +230,7 @@
             required="true"></app-input>
         </div>
         <div class="flex flex-col col-span-2">
-          <app-input [control]="editUserForm.get('email')" type="email" label="* البريد الالكتروني" maxlength="20"
+          <app-input [control]="editUserForm.get('email')" type="email" label="* البريد الالكتروني" maxlength="80"
             autofocus="true" required="true"></app-input>
         </div>
         <div class="flex col-span-2">
@@ -290,7 +290,8 @@
           </button>
           <button type="submit"
             class="inline-block bg-black shrink-0 rounded-3xl mx-1 px-6 py-1 text-sm font-semibold text-white hover:text-gray-50 focus:outline-none active:text-white disabled:cursor-not-allowed disabled:bg-gray-200 disabled:text-gray-400"
-            [disabled]="editUserForm.invalid">
+            [disabled]="editUserForm.invalid"
+            >
             تأكيد
           </button>
         </div>
