--- a/src/app/pages/dashboard/views/info-cards/info-cards.component.html
+++ b/src/app/pages/dashboard/views/info-cards/info-cards.component.html
@@ -113,7 +113,7 @@
             <p class="font-semibold"> -2%</p>
             <p class="text-gray-600">الشهر الماضي</p>
           </div>
-          <button type="button"
+          <button type="button" (click)="downloadPdf()"
             class="text-white bg-gray-800 hover:bg-gray-900 focus:outline-none focus:ring-4 focus:ring-gray-300 font-medium rounded-full text-sm px-5 py-2.5 mr-2 mb-2 dark:bg-gray-800 dark:hover:bg-gray-700 dark:focus:ring-gray-700 dark:border-gray-700">
             <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="1.5" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
