--- a/src/app/pages/dashboard/views/orders-grid/orders-grid.component.html
+++ b/src/app/pages/dashboard/views/orders-grid/orders-grid.component.html
@@ -17,6 +17,9 @@
         <th scope="col" class="px-6 py-3">
           الحالة
         </th>
+        <th scope="col" class="px-6 py-3">
+          التكلفة
+        </th>
         <th scope="col" class="px-6 py-3 mx-1">
           الاجراء
         </th>
@@ -46,6 +49,9 @@
           <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
             {{(order.orderStatus===0 ? 'proccessed' : (order.orderStatus=== 1?'delivered':(order.orderStatus=== 2?
             'shipped':(order.orderStatus===3? 'canceled': "unkown"))))}}
+          </td>
+          <td class="px-6 py-4 font-semibold text-gray-900 :text-white">
+            ${{order.totalPrice}}
           </td>
           <td class="px-6 py-4">
             <button type="button" (click)="cancelOrder(order.id)" *ngIf="order.orderStatus === 0"
