--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -4,7 +4,7 @@
   <input [formControl]="control" [placeholder]="placeholder" [type]="type" [value]="value"
     class="mt-1 rounded-3xl border-2 border-gray-200 bg-white text-sm text-gray-700 p-2 text-right w-full" [ngClass]="control.invalid && showErrors() ? 'border-2 border-red-500':''" [size]="size" [maxlength]="maxlength" [minlength]="minlength" [required]="required" [disabled]="disabled" [pattern]="pattern" [autocomplete]="autocomplete" [autofocus]="autofocus" [title]="title"/>
   <div
-    class="absolute left-1/4 -top-3 w-1/2 z-10 px-3 py-1 text-sm font-medium border-2 border-red-500 text-red-500 rounded-3xl shadow-sm backdrop-blur-3xl tooltip"
+    class="absolute left-1/4 -top-6  z-10 px-3 py-1 text-sm font-medium border-2 border-red-500 text-red-500 rounded-3xl shadow-sm backdrop-blur-3xl tooltip"
     *ngIf="showErrors()">
     <p class="text-sm  text-center" *ngIf="control.errors['required']">
       هذا الحقل مطلوب
